--- a/server/views/load_balancers/new.html.haml
+++ b/server/views/load_balancers/new.html.haml
@@ -6,18 +6,18 @@
       %label
         Name:
       %input{ :name => 'name', :size => 30 }/
-    -if @instances
+    -if instances
       %p
         %label
           Running instance:
         %select{ :name => 'instance_id'}
-          - @instances.select{|i| i.state=="RUNNING"}.each do |instance|
+          - instances.select{|i| i.state=="RUNNING"}.each do |instance|
             %option{ :value => instance.id } #{instance.id}
     %p
       %label
         Realm:
       %select{ :name => 'realm_id'}
-        - @realms.each do |realm|
+        - realms.each do |realm|
           %option{ :value => realm.id } #{realm.id} - #{realm.name}
     %hr
     %p
