--- a/server/views/realms/show.html.haml
+++ b/server/views/realms/show.html.haml
@@ -1,17 +1,17 @@
 =header Realm
-=subheader @realm.id
+=subheader realm.id
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
     %li{ :'data-role' => 'list-divider'} Identifier
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@realm.id
+      %p{ :'data-role' => 'fieldcontain'}=realm.id
     %li{ :'data-role' => 'list-divider'} Name
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@realm.name
+      %p{ :'data-role' => 'fieldcontain'}=realm.name
     %li{ :'data-role' => 'list-divider'} State
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@realm.state
+      %p{ :'data-role' => 'fieldcontain'}=realm.state
     %li{ :'data-role' => 'list-divider'} Limit
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@realm.limit
+      %p{ :'data-role' => 'fieldcontain'}=realm.limit
