--- a/server/views/storage_snapshots/index.html.haml
+++ b/server/views/storage_snapshots/index.html.haml
@@ -3,7 +3,7 @@
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
     %li{ :'data-role' => 'list-divider'}=driver_symbol
-    - @storage_snapshots.each do |snapshot|
+    - elements.each do |snapshot|
       %li
         %a{ :href => storage_snapshot_url(snapshot.id), :'data-ajax' => 'false'}
           %img{ :class => 'ui-link-thumb', :src => '/images/snapshot.png'}
