--- a/server/views/addresses/_address.html.haml
+++ b/server/views/addresses/_address.html.haml
@@ -1,6 +1,6 @@
 %li
-  %a{ :href => address_url(@address.id), :'data-ajax' => 'false'}
+  %a{ :href => address_url(address.id), :'data-ajax' => 'false'}
     %img{ :class => 'ui-link-thumb', :src => '/images/address.png'}
-    %h3= @address.id
+    %h3= address.id
     %span{ :class => 'ui-li-count'}
-      = @address.instance_id ? @address.instance_id : 'Free'
+      = address.instance_id ? address.instance_id : 'Free'
