--- a/server/views/docs/operation.html.haml
+++ b/server/views/docs/operation.html.haml
@@ -1,5 +1,5 @@
 =header "Deltacloud API #{settings.version} documentation", :back => 'false'
-=subheader "#{action_method(@operation.name, @collection.name).to_s.upcase} /api/#{@collection.name}/#{@operation.name}"
+=subheader "#{action_method(operation.name, collection.name).to_s.upcase} /api/#{collection.name}/#{operation.name}"
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
@@ -8,12 +8,12 @@
         Description:
     %li
       %br
-      %p=@operation.description
+      %p=operation.description
 
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
     %li{ :'data-role' => 'list-divider', :'data-divider-theme' => 'a'}
       %h3 Parameters:
-    - @operation.each_param do |p|
+    - operation.each_param do |p|
       %li{ :'data-role' => 'list-divider'}
         =p.name
         %span{ :class => 'ui-li-count'}
@@ -21,8 +21,8 @@
       %li
         %br
         %p=p.description.empty? ? '<strong>FIXME:</strong> No description for this parameter' : p.description
-    - @features.sort { |a,b| a.name.to_s <=> b.name.to_s }.each do |f|
-      - f.decl.operation(@operation.name).each_param do |p|
+    - features.sort { |a,b| a.name.to_s <=> b.name.to_s }.each do |f|
+      - f.decl.operation(operation.name).each_param do |p|
         %li{ :'data-role' => 'list-divider'}
           =p.name
           %span{ :class => 'ui-li-count'}
