--- a/server/views/hardware_profiles/index.html.haml
+++ b/server/views/hardware_profiles/index.html.haml
@@ -3,7 +3,7 @@
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview, :'data-inset' => :true }
-    - for profile in order_hardware_profiles(@hardware_profiles)
+    - for profile in order_hardware_profiles(elements)
       %li{ :'data-theme' => 'c'}
         %a{ :href => hardware_profile_url(profile.id)}
           %img{ :class => 'ui-link-thumb', :src => '/images/profile.png'}
