--- a/server/views/images/index.html.haml
+++ b/server/views/images/index.html.haml
@@ -4,7 +4,7 @@
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
     %li{ :'data-role' => 'list-divider'}=driver_symbol
-    - @images.each do |image|
+    - elements.each do |image|
       %li
         %a{ :href => image_url(image.id), :'data-ajax' => 'false'}
           %img{ :class => 'ui-link-thumb', :src => '/images/image.png'}
