--- a/server/views/storage_snapshots/show.html.haml
+++ b/server/views/storage_snapshots/show.html.haml
@@ -1,22 +1,22 @@
 =header "Storage snapshot"
-=subheader @storage_snapshot.id
+=subheader storage_snapshot.id
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
     %li{ :'data-role' => 'list-divider'} Name
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@storage_snapshot.id
+      %p{ :'data-role' => 'fieldcontain'}=storage_snapshot.id
     %li{ :'data-role' => 'list-divider'} Storage volume
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@storage_snapshot.storage_volume_id
+      %p{ :'data-role' => 'fieldcontain'}=storage_snapshot.storage_volume_id
     %li{ :'data-role' => 'list-divider'} Created
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@storage_snapshot.created
+      %p{ :'data-role' => 'fieldcontain'}=storage_snapshot.created
     %li{ :'data-role' => 'list-divider'} State
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@storage_snapshot.state
+      %p{ :'data-role' => 'fieldcontain'}=storage_snapshot.state
     %li{ :'data-role' => 'list-divider'} Actions
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
         - if driver.respond_to?(:destroy_storage_snapshot)
-          =link_to_action "Delete", url_for("storage_snapshots/#{@storage_snapshot.id}"), :delete
+          =link_to_action "Delete", url_for("storage_snapshots/#{storage_snapshot.id}"), :delete
