Fix the "invalid locals key" error
Loading the XML list of networks and subnets caused Tilt to rais an
exception:

    invalid locals key: :@network  (keys must be variable names)

Renaming `@network` to `network` (and the same for `@subnet`) in the
views fixed the problem.

Signed-off-by: Tomas Sedovic <tomas@sedovic.cz>

--- a/server/views/subnets/index.xml.haml
+++ b/server/views/subnets/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %subnets
   - @elements.each do |c|
-    = haml :'subnets/show', :locals => { :@subnet => c, :partial => true }
+    = haml :'subnets/show', :locals => { :subnet => c, :partial => true }
