--- a/server/views/networks/index.xml.haml
+++ b/server/views/networks/index.xml.haml
@@ -1,4 +1,4 @@
 !!!XML
 %networks
   - @elements.each do |c|
-    = haml :'networks/show', :locals => { :@network => c, :partial => true }
+    = haml :'networks/show', :locals => { :network => c, :partial => true }
