RHEVm - Provide for user selectable first boot device.
The default first boot device has been changed in the rbovirt gem
to hard disk, followed by network. This push allows the user to
explicitly specify the first boot device as either netowrk or
hard disk with the other becoming the second boot device.
TrackedAt: http://tracker.deltacloud.org/patch/76cf9d5d5f4b72e42f125af39327ea7d9cae4734

--- a/server/views/instances/new.html.haml
+++ b/server/views/instances/new.html.haml
@@ -37,6 +37,14 @@
             %br/
             %a{ :href => "", :onclick => 'encodeb64();', :'data-ajax' => 'false'} Encode data
 
+        - if driver.class.has_feature?(:instances, :first_boot_dev)
+          %fieldset{ :'data-role' => 'controlgroup', 'data-iconpos' => 'right'}
+            %legend First boot device:
+            %input{ :name => 'first_boot_dev', :id => :first_boot_dev_hd, :value => 'hd', :checked => 'checked', :type => 'radio'}
+            %label{ :for => :first_boot_dev_hd} Hard Disk
+            %input{ :name  => 'first_boot_dev', :id => :first_boot_dev_network, :value => 'network', :type => "radio"}
+            %label{ :for => :first_boot_dev_network} Network
+
         - if driver.class.has_feature?(:instances, :instance_count)
           %div{ 'data-role' => :fieldcontain }
             %label{ :for => :instance_count} # of instances to be launched:
